--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ body {
 }
 
 .board {
-  width: 100%;
-  height: 100vh;
+  margin: 3rem;
   display: grid;
   justify-content: center;
   align-content: center;
